# NEATRust

./: .gitignore  Cargo.toml  README.md
output/: .gitignore  clear.bat  clear.py
src/: config.rs  lib.rs  main.rs
src/debugging/: printer.rs
src/evaluator/: evaluator.rs  fitness_genome.rs
src/genome/: connection_gene.rs  counter.rs  genome.rs  node_gene.rs
src/genome/species/: species.rs
src/network/: neuralnetwork.rs
